# cmake_demos

./: README.md
demo1/: CMakeLists.txt  Makefile
demo2/: CMakeLists.txt
demo3/: CMakeLists.txt  libdemo3.c
demo4/: CMakeLists.txt  Makefile  libdemo4.c
demo5/: CMakeLists.txt  main.c
demo6/: CMakeLists.txt  main.c
demo7/: CMakeLists.txt  Makefile
demo7/demo1/: CMakeLists.txt  main.c
demo7/demo2/: CMakeLists.txt  libdemo2.c  libdemo2.h
demo7/demo3/: CMakeLists.txt  libdemo3.h
demo7/demo4/: CMakeLists.txt  libdemo4.h
demo7/demo5/: CMakeLists.txt  main.c
demo7/demo6/: CMakeLists.txt  main.c
